# portfolio

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  docker-compose.yml  projects.md  work_experience.md
api/: CLAUDE.md  Dockerfile
api/src/: api_docs.rs  routes.rs
api/src/db/: mod.rs  projects_db.rs
api/src/handlers/: mod.rs  skills.rs
api/src/models/: mod.rs  skill.rs
api/tests/integration/: env_connection_test.rs  fetch_projects_test.rs  test_utils.rs
db/: schema.sql  seed.sql
scripts/: dev.sh
src/: main.rs  routes.rs
src/db/: connection.rs  jobs_db.rs  projects_db.rs  skills_db.rs
src/handlers/: jobs.rs  projects.rs
src/models/: job.rs  project.rs
tests/integration/: fetch_jobs_tests.rs  fetch_skills_test.rs  mod.rs
web/: CLAUDE.md  Dockerfile  eslint.config.mjs  jest.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/src/api/: client.ts  config.ts  fetcher.ts  hooks.ts
web/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
web/src/app/experience/: page.module.css  page.tsx
web/src/app/projects/: page.module.css  page.tsx
web/src/components/: ApiSection.module.css  ApiSection.tsx  Header.module.css  Header.tsx  Hero.module.css  Hero.tsx  HighlightCards.module.css  HighlightCards.tsx  Jobs.module.css  Jobs.tsx  PageSection.module.css  PageSection.tsx  Projects.module.css
web/src/components/__tests__/: ApiSection.test.tsx  Hero.test.tsx  HighlightCards.test.tsx  PageSection.test.tsx  README.md
